Doc/0.2/08-containers/03_tabs_ru.md
![RimUI Framework](../../../About/Preview.png)

**RimUI Framework** — ядро `0.7.15` · мод `0.2.1` · RimWorld `1.6`

---

[Оглавление](../index_ru.md) - Контейнеры | Пред.: [Accordion](02_accordion_ru.md) | След.: [Stepper](04_stepper_ru.md) | [English](03_tabs_en.md)

---

# Tabs

Вкладки: клик по заголовку переключает активную. Расположить их можно на любой стороне — сверху,
снизу, слева или справа; активная вкладка визуально сливается с телом.

`RimUI.Components.Tabs : UiElement`

## Пример

```csharp
var tb = new Tabs { Position = TabPosition.Top };
tb.Tab("Оружие", weaponsBody);
tb.Tab("Броня", armorBody);
tb.Tab("Выкл", disabledBody, disabled: true);
```

## Параметры

| Параметр | Тип | По умолчанию | Описание |
|---|---|---|---|
| `Key` | `string` | `null` | Ключ состояния в ID-store (см. «Ключ и состояние» на странице «Архитектура»). Нужен, если элемент пересоздаётся между кадрами или его состояние надо сохранить между пересозданиями. |
| `Pages` | `List<TabPage>` (readonly) | пусто | Список вкладок. |
| `DefaultTab` | `int` | `0` | Индекс изначально активной вкладки. |
| `TabHeight` | `float` | `30` | Высота заголовка вкладки. |
| `TabPadding` | `float` | `14` | Горизонтальный паддинг заголовка. |
| `Position` | `TabPosition` (`Top`\|`Bottom`\|`Left`\|`Right`) | `Top` | Сторона размещения вкладок. |

`TabPage`: `string Title`, `UiElement Body`, `bool Disabled` (свой цвет текста, не кликается).

## Точная механика ширины и переполнения

Ширина каждой вкладки считается по содержимому: `width[i] = textWidth(Title) + 3 + TabPadding×2`
(3 — фиксированная служебная константа, `TabPadding` учитывается с обеих сторон).

- При `Position = Top`/`Bottom` (горизонтальный ряд) — у КАЖДОЙ вкладки своя ширина по формуле
  выше.
- При `Position = Left`/`Right` (вертикальная колонка) — используется ОДНА общая ширина, равная
  максимальной среди всех вкладок; остальные вкладки в колонке получают ту же ширину, даже если
  их текст короче.

**Переполнение не обрабатывается**: если сумма ширин вкладок больше доступного пространства,
вкладки просто вылезают за пределы контейнера — ни переноса на второй ряд, ни горизонтального
скролла, ни обрезки текста в текущей реализации нет. При большом числе вкладок в горизонтальном
ряду стоит закладывать это ограничение заранее (например, ограничивать длину подписей).

При `Position = Left`/`Right` заголовки вкладок остаются строго горизонтальными (не
поворачиваются вместе с колонкой) — акцентная полоска активной вкладки в этом случае рисуется
вертикальной линией толщиной 2 у грани, примыкающей к телу.

## Стили

Слоты: `tabs/tab`, `tabs/tab_active`, `tabs/tab_hover`, `tabs/tab_text*`, `tabs/body`,
`tabs/strip`.

## Методы

| Метод | Возвращает | Описание |
|---|---|---|
| `Tab(string title, UiElement body, bool disabled = false)` | `Tabs` | Добавить вкладку, возвращает себя (цепочка). |
| `GetSelected()` | `int` | Индекс активной вкладки (до первого показа — `DefaultTab`). |
| `SetSelected(int index)` | — | Программно выбрать вкладку (как клик по заголовку) и вызвать `OnChange`. Применяется на ближайшем проходе Measure, а не сразу — активная вкладка влияет на раскладку тела. |
| `SetStyle(string path, string value)` | — | Задать стиль по пути; применяется к корневому `Style` элемента — именованных частей у `Tabs` нет (заголовки/тело/полоса настраиваются через слоты темы, не через `SetStyle`). |

## События

| Событие | Тип | Параметры | Когда вызывается |
|---|---|---|---|
| `OnChange` | `Action<int>` | индекс новой активной вкладки | Клик по заголовку вкладки, а также вызов `SetSelected(int)`. |
| `Events.SelectionChanged` | `UiEventHandler` | `data.SelectedIndex`, `data.SelectedValue` | Клик по заголовку вкладки (переключение активной). |
| `Events.HoverEnter` / `Events.HoverLeave` | `UiEventHandler` | `data.MousePosition` | Курсор вошёл/покинул границы (по разу на переход). |
| `Events.Hover` | `UiEventHandler` | `data.MousePosition` | Курсор над элементом — КАЖДЫЙ КАДР. Тяжёлый обработчик просадит FPS, не делайте в нём аллокаций/поиска/IO. |
| `Events.Click` / `Events.RightClick` | `UiEventHandler` | `data.MousePosition` | ЛКМ / ПКМ по элементу (по всему компоненту — границы всего `Tabs`, не отдельного заголовка). |
| `Events.Scroll` | `UiEventHandler` | `data.ScrollDelta` | Колесо мыши над элементом. |
| `Events.DisabledChanged` | `UiEventHandler` | `data.Disabled` | Изменилась эффективная активность. |

## Поддержка механик

| Механика | Поддержка | Пояснение |
|---|---|---|
| Стиль | Да | Слоты `tabs/*`. |
| Спрайт-рамка | Да | Через слоты (фон вкладки). |
| Анимация | Нет отдельная | Переключение активной вкладки мгновенное (дискретный выбор). |
| Disabled | Да | На уровне `TabPage.Disabled` — свой цвет текста, не кликается. |
| Hover-fade | Да | Для НЕактивных вкладок (`Theme.HoverFadeDuration`); активная переключается мгновенно. |


---

[Оглавление](../index_ru.md) - Контейнеры | Пред.: [Accordion](02_accordion_ru.md) | След.: [Stepper](04_stepper_ru.md) | [English](03_tabs_en.md)

## Поддержать автора
Если тебе нравится RimUI Framework, можешь поддержать разработку:

[DonationAlerts](https://www.donationalerts.com/r/klimprog)
[Boosty](https://boosty.to/klimprog/donate)

**USDT (TRC20):** `TA4zq9F4TTrSQXjEESMBk8juQMGNLXX4B5`

Спасибо! ❤️
